zmiana koloru przyciskow na stronie glownej

--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -511,15 +511,15 @@ header.header {
 			margin-bottom: 30px;
 			a {
 				padding: 10px 40px;
-				border: 2px solid #ffe634;
-				color: #ffe634;
+				border: 2px solid #ffffff;
+				color: #ffffff;
 				background: transparent;
 				text-transform: uppercase;
 				font-weight: 500; 
 				border-radius: 25px;
 				transition: .5s all;
 				color: #000;
-				background: #ffe634;
+				background: #ffffff;
 				margin-left: 20px;
 				&:hover {						
 					background: #ffe634;
